# jax-bidirectional-tree-rake-compress

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  package.yml
benchmarks/: README.md  benchmark.py
docs/: design.md  optimal_control.md
examples/: affine_broadcast.py  subtree_sums.py
src/jax_bidirectional_tree_rake_compress/: __init__.py  _algebra.py  _contract.py  _plan.py
tests/: test_affine_broadcast.py  test_package.py  test_plan.py  test_subtree_sum.py
